tests/golden/type_errors/module_duplicate_export_main.cd
import "./module_duplicate_export_deps/a.cd";
import "./module_duplicate_export_deps/b.cd";
print value;
