tests/golden/type_errors/module_duplicate_export_main.err
Type error at <repo>/tests/golden/type_errors/module_duplicate_export_main.cd:2:1: variable `value` already declared in this scope
  import "./module_duplicate_export_deps/b.cd";
  ^
